<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTaskActivity"
    android:layoutDirection="rtl"
    >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/add_activity_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/titleOfAddActivity">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

    <EditText
        android:id="@+id/title_of_task_in_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/titleOfTaskHint" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="100"
        android:layout_marginTop="10dp"
        android:id="@+id/summary_text_input_layout"
        app:counterEnabled="true"
        android:layoutDirection="rtl"
        app:counterTextAppearance="@android:color/holo_orange_light"
        >
    <EditText
        android:id="@+id/summary_of_task_in_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/summaryOfTaskHint"
        />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/description_text_input_layout"
        >

    <EditText
        android:id="@+id/details_of_task_in_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:gravity="top"
        android:hint="@string/detailsOfTaskHint"
        android:lines="8" />


    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/image_text_input_layout"
            >

    <EditText
        android:id="@+id/image_of_task_in_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/imageOfTaskHint"
        android:inputType="textWebEditText"
        android:drawableEnd="@drawable/ic_insert_photo_black_24dp"
        />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="URL"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/add_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addTaskButtonText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        />

</LinearLayout>