<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedTaskActivity"
    android:layoutDirection="rtl"
    >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/detailed_activity_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detailed_task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        app:layout_scrollFlags="scroll|enterAlways"
        >

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/image_of_task_in_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:background="@color/colorAccent"
        />


    <android.support.v7.widget.CardView
        android:layout_below="@id/image_of_task_in_detail"
        android:id="@+id/card_view_in_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_margin="6dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="69dp">

                <TextView
                    android:id="@+id/num_of_task_text_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numOfTaskInDetail"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    />
                <TextView
                    android:id="@+id/id_of_task_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idOfTaskInDetail"
                    android:layout_below="@id/num_of_task_text_in_detail"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    />


            </RelativeLayout>


            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#80BEBEBE"
                >

                <TextView
                    android:id="@+id/title_of_task_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleOfTaskInDetail"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    />
                <TextView
                    android:id="@+id/description_of_task_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/descriptionOfTaskInDetail"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/date_icon_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_available_black_24dp"
                    android:layout_marginStart="70dp"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/date_text_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/date_icon_in_detail"
                    android:layout_marginStart="5dp"
                    android:text="@string/dateTextInDetail"
                    android:layout_centerVertical="true"
                    />
                <ImageView
                    android:id="@+id/time_icon_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_marginStart="270dp"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/time_text_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/time_icon_in_detail"
                    android:layout_marginStart="5dp"
                    android:text="@string/timeTextInDetail"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>