<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:id="@+id/list_item"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="6dp"
        card_view:cardCornerRadius="10dp"
        card_view:contentPadding="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/num_of_task_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/numOfTaaskText"
                   android:textColor="@android:color/black"
                   />
               <TextView
                   android:id="@+id/id_of_task"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/idOfTask"
                   android:layout_below="@id/num_of_task_text"
                   />

               <ImageView
                   android:id="@+id/image_of_task_in_list"
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:layout_alignParentEnd="true"
                   android:layout_marginEnd="5dp"
                   />
           </RelativeLayout>


            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#80BEBEBE"
                >

                <TextView
                    android:id="@+id/title_of_task_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleOfTaskInListItem"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    />
                <TextView
                    android:id="@+id/summary_of_task_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/summaryOfTaskInList"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_available_black_24dp"
                    android:layout_marginStart="70dp"
                    />

                <TextView
                    android:id="@+id/date_of_task_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/date_icon"
                    android:layout_marginStart="5dp"
                    android:text="date"
                    />
                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_marginStart="270dp"
                    />

                <TextView
                    android:id="@+id/time_of_task_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/time_icon"
                    android:layout_marginStart="5dp"
                    android:text="time"
                    />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>